@@ -1,21 +1,21 @@
 package com.server.nodak.domain.follow.controller;
 
+import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.mockito.ArgumentMatchers.anyLong;
+import static org.mockito.Mockito.times;
+import static org.mockito.Mockito.verify;
+import static org.mockito.Mockito.when;
+
 import com.server.nodak.domain.follow.service.FollowService;
-import com.server.nodak.domain.user.dto.UserInfoResponse;
+import com.server.nodak.domain.user.dto.UserInfoDTO;
 import com.server.nodak.global.common.response.ApiResponse;
+import java.security.Principal;
+import java.util.List;
 import org.junit.jupiter.api.Test;
 import org.mockito.InjectMocks;
 import org.mockito.Mock;
 import org.springframework.boot.test.context.SpringBootTest;
 import org.springframework.http.ResponseEntity;
-
-import java.security.Principal;
-import java.util.Arrays;
-import java.util.List;
-
-import static org.junit.jupiter.api.Assertions.assertEquals;
-import static org.mockito.ArgumentMatchers.anyLong;
-import static org.mockito.Mockito.*;
 
 @SpringBootTest
 public class FollowControllerTest {
@@ -49,10 +49,11 @@ public class FollowControllerTest {
     @Test
     public void getFollowersTest() {
         Principal principal = () -> "1";
-        UserInfoResponse userInfoResponse = new UserInfoResponse(1L, "email", "nickname", "profileImageUrl", "introduction", null, null, 1, 1);
-        when(followService.getFollowers(anyLong())).thenReturn(Arrays.asList(userInfoResponse));
+        UserInfoDTO userInfoDTO = new UserInfoDTO(1L, "email", "nickname", "profileImageUrl", "introduction", null,
+                null, 1L, 1L);
+        when(followService.getFollowers(anyLong())).thenReturn(List.of(userInfoDTO));
 
-        ResponseEntity<ApiResponse<List<UserInfoResponse>>> response = followController.getFollowers(principal);
+        ResponseEntity<ApiResponse<List<UserInfoDTO>>> response = followController.getFollowers(principal);
 
         verify(followService, times(1)).getFollowers(1L);
         assertEquals(200, response.getStatusCode().value());
@@ -62,10 +63,11 @@ public class FollowControllerTest {
     @Test
     public void getFolloweesTest() {
         Principal principal = () -> "1";
-        UserInfoResponse userInfoResponse = new UserInfoResponse(1L, "email", "nickname", "profileImageUrl", "introduction", null, null, 1, 1);
-        when(followService.getFollowees(anyLong())).thenReturn(Arrays.asList(userInfoResponse));
+        UserInfoDTO userInfoDTO = new UserInfoDTO(1L, "email", "nickname", "profileImageUrl", "introduction", null,
+                null, 1L, 1L);
+        when(followService.getFollowees(anyLong())).thenReturn(List.of(userInfoDTO));
 
-        ResponseEntity<ApiResponse<List<UserInfoResponse>>> response = followController.getFollowees(principal);
+        ResponseEntity<ApiResponse<List<UserInfoDTO>>> response = followController.getFollowees(principal);
 
         verify(followService, times(1)).getFollowees(1L);
         assertEquals(200, response.getStatusCode().value());
